// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list-item : list-item 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {
        "src": "./img/img0.png",
      },
      "children": Array [],
      "frame": Object {
        "height": 80,
        "width": 80,
        "x": 12,
        "y": 48,
      },
      "style": Object {
        "marginRight": 104,
      },
      "type": "Image",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下无敌狗啦啦…",
          },
          "children": Array [],
          "frame": Object {
            "height": 36,
            "width": 235,
            "x": 104,
            "y": 52,
          },
          "style": Object {
            "color": "#333333ff",
            "fontSize": 14,
            "fontWeight": 5,
            "letterSpacing": 0,
            "lineHeight": 18,
          },
          "type": "Text",
        },
        Object {
          "attrs": Object {
            "text": "¥20～¥160",
          },
          "children": Array [],
          "frame": Object {
            "height": 16,
            "width": 81,
            "x": 104,
            "y": 108,
          },
          "style": Object {
            "alignSelf": "flex-start",
            "color": "#ff6600ff",
            "fontSize": 16,
            "fontWeight": 5,
            "letterSpacing": 0,
            "lineHeight": 16,
          },
          "type": "Text",
        },
      ],
      "frame": Object {
        "height": 72,
        "width": 235,
        "x": 104,
        "y": 52,
      },
      "style": Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "paddingTop": 0,
      },
      "type": "Block",
    },
  ],
  "frame": Object {
    "height": 80,
    "width": 327,
    "x": 12,
    "y": 48,
  },
  "style": Object {
    "alignItems": "center",
    "flexDirection": "row",
    "justifyContent": "flex-start",
    "paddingLeft": 0,
  },
  "type": "Block",
}
`;

exports[`list-origin1 : list-origin1 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {
        "text": "为您推荐",
      },
      "children": Array [],
      "frame": Object {
        "height": 16,
        "width": 64,
        "x": 24,
        "y": 420,
      },
      "style": Object {
        "alignSelf": "flex-start",
        "color": "#333333ff",
        "fontSize": 16,
        "fontWeight": 5,
        "letterSpacing": 0,
        "lineHeight": 16,
      },
      "type": "Text",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "src": "./img/img1.png",
              },
              "children": Array [],
              "frame": Object {
                "height": 80,
                "width": 80,
                "x": 24,
                "y": 452,
              },
              "style": Object {},
              "type": "Image",
            },
            Object {
              "attrs": Object {
                "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下无敌狗啦啦…",
              },
              "children": Array [],
              "frame": Object {
                "height": 36,
                "width": 235,
                "x": 116,
                "y": 456,
              },
              "style": Object {
                "color": "#333333ff",
                "fontSize": 14,
                "fontWeight": 5,
                "letterSpacing": 0,
                "lineHeight": 18,
              },
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "¥20～¥160",
              },
              "children": Array [],
              "frame": Object {
                "height": 16,
                "width": 81,
                "x": 116,
                "y": 512,
              },
              "style": Object {
                "color": "#ff6600ff",
                "fontSize": 16,
                "fontWeight": 5,
                "letterSpacing": 0,
                "lineHeight": 16,
              },
              "type": "Text",
            },
          ],
          "frame": Object {
            "height": 80,
            "width": 327,
            "x": 24,
            "y": 452,
          },
          "style": Object {},
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "src": "./img/img3.png",
              },
              "children": Array [],
              "frame": Object {
                "height": 80,
                "width": 80,
                "x": 24,
                "y": 544,
              },
              "style": Object {},
              "type": "Image",
            },
            Object {
              "attrs": Object {
                "text": "大型犬野兽派洗剪吹A套餐",
              },
              "children": Array [],
              "frame": Object {
                "height": 18,
                "width": 235,
                "x": 116,
                "y": 548,
              },
              "style": Object {
                "color": "#333333ff",
                "fontSize": 14,
                "fontWeight": 5,
                "letterSpacing": 0,
                "lineHeight": 18,
              },
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "¥20～¥75",
              },
              "children": Array [],
              "frame": Object {
                "height": 16,
                "width": 73,
                "x": 116,
                "y": 604,
              },
              "style": Object {
                "color": "#ff6600ff",
                "fontSize": 16,
                "fontWeight": 5,
                "letterSpacing": 0,
                "lineHeight": 16,
              },
              "type": "Text",
            },
          ],
          "frame": Object {
            "height": 80,
            "width": 327,
            "x": 24,
            "y": 544,
          },
          "style": Object {},
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "src": "./img/img2.png",
              },
              "children": Array [],
              "frame": Object {
                "height": 80,
                "width": 80,
                "x": 24,
                "y": 636,
              },
              "style": Object {},
              "type": "Image",
            },
            Object {
              "attrs": Object {
                "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下狗",
              },
              "children": Array [],
              "frame": Object {
                "height": 36,
                "width": 235,
                "x": 116,
                "y": 640,
              },
              "style": Object {
                "color": "#333333ff",
                "fontSize": 14,
                "fontWeight": 5,
                "letterSpacing": 0,
                "lineHeight": 18,
              },
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "¥20～¥160",
              },
              "children": Array [],
              "frame": Object {
                "height": 16,
                "width": 81,
                "x": 116,
                "y": 696,
              },
              "style": Object {
                "color": "#ff6600ff",
                "fontSize": 16,
                "fontWeight": 5,
                "letterSpacing": 0,
                "lineHeight": 16,
              },
              "type": "Text",
            },
          ],
          "frame": Object {
            "height": 80,
            "width": 327,
            "x": 24,
            "y": 636,
          },
          "style": Object {},
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "src": "./img/img4.png",
              },
              "children": Array [],
              "frame": Object {
                "height": 80,
                "width": 80,
                "x": 24,
                "y": 728,
              },
              "style": Object {},
              "type": "Image",
            },
            Object {
              "attrs": Object {
                "text": "小型犬洗剪吹B套餐",
              },
              "children": Array [],
              "frame": Object {
                "height": 18,
                "width": 235,
                "x": 116,
                "y": 732,
              },
              "style": Object {
                "color": "#333333ff",
                "fontSize": 14,
                "fontWeight": 5,
                "letterSpacing": 0,
                "lineHeight": 18,
              },
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "¥20～¥75",
              },
              "children": Array [],
              "frame": Object {
                "height": 16,
                "width": 73,
                "x": 116,
                "y": 788,
              },
              "style": Object {
                "color": "#ff6600ff",
                "fontSize": 16,
                "fontWeight": 5,
                "letterSpacing": 0,
                "lineHeight": 16,
              },
              "type": "Text",
            },
          ],
          "frame": Object {
            "height": 80,
            "width": 327,
            "x": 24,
            "y": 728,
          },
          "style": Object {},
          "type": "Block",
        },
      ],
      "frame": Object {
        "height": 356,
        "width": 327,
        "x": 24,
        "y": 452,
      },
      "style": Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "paddingTop": 0,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {
        "text": "更多服务/商品",
      },
      "children": Array [],
      "frame": Object {
        "height": 14,
        "width": 91,
        "x": 142.5,
        "y": 831,
      },
      "style": Object {
        "alignSelf": "flex-start",
        "color": "#ff6600ff",
        "fontSize": 14,
        "fontWeight": 5,
        "letterSpacing": 0,
        "lineHeight": 14,
        "marginLeft": 130.5,
      },
      "type": "Text",
    },
  ],
  "frame": Object {
    "height": 452,
    "width": 351,
    "x": 12,
    "y": 404,
  },
  "style": Object {
    "alignItems": "center",
    "flexDirection": "column",
    "justifyContent": "flex-start",
    "paddingTop": 16,
  },
  "type": "Block",
}
`;
